# skytorch

./: .dockerignore  .gitignore  .golangci.yaml  MANIFEST.in  Makefile  README.md  go.mod  go.sum  pyproject.toml  setup.py
.github/workflows/: build-and-publish-images.yaml  build-and-publish-images.yml  build-and-run-e2e-tests.yaml  build-and-run-it-tests.yaml  build-and-run-tests.yaml  check-and-test-operator.yaml
.github/workflows/free-disk-space/: action.yaml
cmd/: Containerfile  main.go
cmd/operator/: main.go
cmd/server/torch/: Containerfile
config/base/crds/: compute.kpu.dev_computes.yaml  compute.skytorch.dev_computes.yaml  kustomization.yaml
config/base/manager/: config.yaml  config_patch.yaml  kustomization.yaml  manager.yaml
config/base/rbac/: compute_roles.yaml  kustomization.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/contour/: 03-rolebindings.yaml  04-gateway-provisioner.yaml
config/e2e/: contour.yaml  gateway.yaml  gatewayclass.yaml  kustomization.yaml  namespace.yaml
config/e2e/contour/: 00-crds.yaml  01-common.yaml  02-roles.yaml  kustomization.yaml
config/openshift/: gateway.yaml  kustomization.yaml  namespace.yaml
demo/: llm_chat.py  llm_hf.py  mnist.py
hack/: container-runtime.sh  gen-aten-ops.py  gen-grpc-proto.sh  gen-python-api.sh  go.mod  go.sum  tools.go  update-codegen.sh
hack/boilerplate/: boilerplate.go.txt
hack/golangci-kal/: .custom-gcl.yaml
hack/swagger/: config.json  main.go  swagger.json
kpu/client/: README.md  __init__.py  cluster.py  compute.py  example_compute.py  grpc.py  init.py
kpu/client/aio/: __init__.py  watch.py
kpu/client/models/: __init__.py  io_k8s_api_autoscaling_v2_container_resource_metric_source.py  io_k8s_api_autoscaling_v2_container_resource_metric_status.py  io_k8s_api_autoscaling_v2_cross_version_object_reference.py  io_k8s_api_autoscaling_v2_external_metric_source.py  io_k8s_api_autoscaling_v2_external_metric_status.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_behavior.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_condition.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_list.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_spec.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_status.py  io_k8s_api_autoscaling_v2_hpa_scaling_policy.py  io_k8s_api_autoscaling_v2_hpa_scaling_rules.py  io_k8s_api_autoscaling_v2_metric_identifier.py  io_k8s_api_autoscaling_v2_metric_spec.py  io_k8s_api_autoscaling_v2_metric_status.py  io_k8s_api_autoscaling_v2_metric_target.py  io_k8s_api_autoscaling_v2_metric_value_status.py  io_k8s_api_autoscaling_v2_object_metric_source.py  io_k8s_api_autoscaling_v2_object_metric_status.py  io_k8s_api_autoscaling_v2_pods_metric_source.py  io_k8s_api_autoscaling_v2_pods_metric_status.py  io_k8s_api_autoscaling_v2_resource_metric_source.py  io_k8s_api_autoscaling_v2_resource_metric_status.py  io_k8s_api_core_v1_affinity.py  io_k8s_api_core_v1_avoid_pods.py  io_k8s_api_core_v1_binding.py  io_k8s_api_core_v1_ceph_fs_persistent_volume_source.py  io_k8s_api_core_v1_ceph_fs_volume_source.py  io_k8s_api_core_v1_cinder_persistent_volume_source.py  io_k8s_api_core_v1_cinder_volume_source.py  io_k8s_api_core_v1_cluster_trust_bundle_projection.py  io_k8s_api_core_v1_component_status.py  io_k8s_api_core_v1_component_status_list.py  io_k8s_api_core_v1_config_map.py  io_k8s_api_core_v1_config_map_list.py  io_k8s_api_core_v1_config_map_projection.py  io_k8s_api_core_v1_config_map_volume_source.py  io_k8s_api_core_v1_container.py  (+142 more)
kpu/server/health/: README.md
kpu/torch/backend/: __init__.py  _async.py  _client.py  _device.py  _driver.py  _runtime.py  _storage.py  _tensor.py  setup.py
kpu/torch/client/: __init__.py  example_client.py  metadata.py  request.py  service.py  stream.py
kpu/torch/common/: __init__.py  metadata.py
kpu/torch/server/: README.md  __init__.py  __main__.py  compute.py  generate_proto.sh  health.py  health_pb2.py  health_pb2_grpc.py  serialization.py  server.py  service.proto  service.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  storage.py  tensor.py
pkg/client/applyconfiguration/: utils.go
pkg/config/: config.go  validation.go
pkg/controllers/: compute_controller.go  grpcroute.go  pvc.go  service.go  setup.go  statefulset.go
pkg/util/cert/: cert.go
pkg/util/constants/: constants.go
pkg/webhooks/: setup.go
skytorch/client/: README.md  __init__.py  cluster.py  compute.py  context.py  decorator.py  event.py  grpc.py  init.py  metrics.py  remote.py  state_dict.py
skytorch/client/aio/: stream.py  watch.py
skytorch/client/models/: compute_v1alpha1_compute.py  compute_v1alpha1_compute_address.py  compute_v1alpha1_compute_list.py  compute_v1alpha1_compute_spec.py  compute_v1alpha1_compute_status.py  compute_v1alpha1_container_override.py  compute_v1alpha1_pod_template_spec_override.py  io_k8s_api_core_v1_affinity.py  io_k8s_api_core_v1_app_armor_profile.py  io_k8s_api_core_v1_attached_volume.py  io_k8s_api_core_v1_avoid_pods.py  io_k8s_api_core_v1_aws_elastic_block_store_volume_source.py  io_k8s_api_core_v1_azure_disk_volume_source.py  io_k8s_api_core_v1_binding.py  (+278 more)
skytorch/server/: __init__.py
skytorch/torch/: profiler.py
test/: README.md  conftest.py  test_cluster_e2e.py  test_compute_e2e.py  test_init_e2e.py
test/e2e/: test_cluster_e2e.py
test/it/: __init__.py  conftest.py  test_data_transfer.py  test_tensor_ops.py
tests/: __init__.py
tests/e2e/: README.md  __init__.py  conftest.py  kind.yaml  test_cluster_e2e.py  test_compute_e2e.py  test_init_e2e.py
tests/it/: __init__.py  conftest.py  op_test_utils.py  test_autograd.py  test_callboxed.py  test_data_transfer.py  test_device.py  test_dispatch_ordering.py  test_dtype.py  test_end_to_end.py  test_nn_training.py  test_ops_activation.py  test_ops_arithmetic.py  test_ops_comparison.py  test_ops_copy.py  test_ops_math.py  test_ops_matmul.py  test_ops_nn.py  test_ops_reduction.py  test_ops_shape.py  test_tensor_factory.py  test_tensor_operations.py
(+134 files in other folders)
