[build-system]
requires = ["setuptools>=75.0", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "skytorch"
description = "PyTorch with Cloud GPUs"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "Antonin Stefanutti", email = "antonin.stefanutti@gmail.com" }
]
keywords = ["pytorch", "cloud", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "grpcio>=1.60.0",
    "kubernetes>=33.0.0",
    "numpy>=2.0.0",
    "protobuf>=6.31.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pydantic>=2.10.0",
]

dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://github.com/astefanutti/skytorch"
Repository = "https://github.com/astefanutti/skytorch"
Issues = "https://github.com/astefanutti/skytorch/issues"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

demo = [
    "pip-system-certs",
    "torchvision",
    "tqdm",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skytorch*"]
exclude = ["skytorch.torch.backend.csrc", "skytorch.torch.server.csrc"]

[tool.setuptools.dynamic]
version = { file = ["VERSION.md"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"skytorch.server.health" = ["*.proto"]
"skytorch.server.metrics" = ["*.proto"]
"skytorch.torch.server" = ["*.proto", "csrc/*.cpp", "csrc/*.h"]
"skytorch.torch.backend" = ["csrc/*.cpp", "csrc/*.h"]

[project.entry-points."torch.backends"]
sky = "skytorch.torch.backend:_autoload"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "grpc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests (requires a Kubernetes cluster with SkyTorch installed)",
    "it: integration tests (uses SkyTorch server)",
]
